--- a/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffReportEdit.cshtml
+++ b/MonthlyStatement/Areas/Staff/Views/StaffReport/StaffReportEdit.cshtml
@@ -60,12 +60,11 @@
                                                 i++;
                                                 <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
                                                     <div class="col-lg-12 ">
-                                                        <input hidden id="dem-@itemss.category_id" value="1" />
+                                                        <input hidden id="dem-@itemss.category_id" value="@models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == itemss.form_staff_report_detail_id && p.staff_report_id == per).Count()" />
                                                         <input hidden id="frmPerDetail-@itemss.category_id" value="@itemss.form_staff_report_detail_id" />
                                                         @if (Model.FormStaffReportDetails.Where(c => c.Category.category_of_id == itemss.category_id && c.Category.category_lv == 3).Count() < 1)
                                                         {
                                                             int inputIndex = 0;
-
                                                             <table class="table table-bordered dataTable">
 
                                                                 <tbody>
@@ -133,12 +132,12 @@
 
                                                                 <div class="accordion-body collapse show" id="panel-body-@(((char)j).ToString())" data-parent="#accordion" style="">
                                                                     <div class="col-lg-12 ">
-                                                                        <input hidden id="dem-@itemsss.category_id" value="1" />
+                                                                        <input hidden id="dem-@itemsss.category_id" value="@models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == itemsss.form_staff_report_detail_id && p.staff_report_id == per).Count()" />
                                                                         <input hidden id="frmPerDetail-@itemsss.category_id" value="@itemsss.form_staff_report_detail_id" />
                                                                         <table class="table table-bordered dataTable">
                                                                             <tbody>
                                                                                 <tr class="" style="max-width: 50px">
-                                                                                    <th colspan="2">@(i).@(k) @itemsss.Category.category_content</th>
+                                                                                    <th colspan="2"> @itemsss.Category.category_content</th>
                                                                                 </tr>
                                                                                 @foreach (var items_content_lv3 in models.StaffReportDetails.Where(p => p.form_staff_report_detail_id == itemsss.form_staff_report_detail_id && p.staff_report_id == per).ToList())
                                                                                 {
