--- a/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
@@ -131,9 +131,9 @@
                                             </td>
                                             <td class="text-center">
                                                 <div class="buttons">
-                                                    <a class="btn btn-icon btn-primary" data-original-title="Cấp quyền" href="@Url.Action("Edit", "Accounts", new { id = item.account_id })">
+                                                    @*<a class="btn btn-icon btn-primary" data-original-title="Cấp quyền" href="@Url.Action("Edit", "Accounts", new { id = item.account_id })">
                                                         <i class="far fa-edit"></i>
-                                                    </a>
+                                                    </a>*@
                                                     <a class="btn btn-icon btn-danger" data-original-title="Xóa" href="@Url.Action("DeleteFaculty", "Faculty", new { id = item.account_id })">
                                                         <i class="far fa-trash-alt"></i>
                                                     </a>
