--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -7,8 +7,13 @@
     int k = 0;
 
 }
-
-@if (ViewBag.CheckFormPer == true)
+@if (Session["faculty"] == null)
+{
+    <div class="alert alert-danger" role="alert">
+        Chưa có khoa. Vui lòng liên hệ thư ký để thêm khoa
+    </div>
+}
+else if (ViewBag.CheckFormPer == true)
 {
     <div class="alert alert-danger" role="alert">
         Chưa có biểu mẫu báo cáo của tháng này
@@ -229,6 +234,9 @@ else
         </div>
     </section>
 }
+
+
+
 
 
 <script src="~/Scripts/jquery-3.4.1.js"></script>
