--- a/MonthlyStatement/Areas/Admin/Views/Statistical/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Statistical/Index.cshtml
@@ -21,11 +21,14 @@
                                 <div class="col-sm-12 col-md-3">
                                     <input name="date" type="month" class="form-control" value="@Date.ToString("yyyy-MM")">
                                 </div>
-                            
+
                                 <div class="col-sm-12 col-md-1">
                                     <button type="submit" class="btn btn-icon btn-primary">
                                         Lọc
                                     </button>
+                                </div>
+                                <div class="col-sm-12 col-md-2">
+                                    <a class="btn btn-icon btn-primary" href="@Url.Action("ExportToExcelFaculty","Statistical", new { date = Date})">Xuất file excel</a>
                                 </div>
                             </div>
 
