Fix code Statistical

--- a/MonthlyStatement/Areas/Department/Views/Statistical/Index.cshtml
+++ b/MonthlyStatement/Areas/Department/Views/Statistical/Index.cshtml
@@ -29,7 +29,7 @@
                                     </button>
                                 </div>
                                 <div class="col-sm-12 col-md-2">
-                                    <a class="btn btn-icon btn-primary" href="@Url.Action("ExportToExcel","Statistical")">Xuất file excel</a>
+                                    <a class="btn btn-icon btn-primary" href="@Url.Action("ExportToExcelDepartment","Statistical", new { date = Date})">Xuất file excel</a>
                                 </div>
                             </div>
 
