--- a/MonthlyStatement/Areas/FacultyAreas/Views/Statistical/Index.cshtml
+++ b/MonthlyStatement/Areas/FacultyAreas/Views/Statistical/Index.cshtml
@@ -27,6 +27,9 @@
                                         Lọc
                                     </button>
                                 </div>
+                                <div class="col-sm-12 col-md-2">
+                                    <a class="btn btn-icon btn-primary" href="@Url.Action("ExportToExcelFaculty","Statistical", new { date = Date})">Xuất file excel</a>
+                                </div>
                             </div>
 
                         </form>
