--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -7,6 +7,8 @@
     int k = 0;
 
 }
+
+
 @if (Session["faculty"] == null)
 {
     <div class="alert alert-danger" role="alert">
@@ -231,7 +233,7 @@ else
                                     </div>*@
 
                                 <div class="text-right mt-3">
-                                    <button id="btnSubmit" role="button" class="btn btn-primary">Lưu báo cáo</button>
+                                    <a id="btnSubmit" role="button" class="btn btn-primary" href="@Url.Action("SendMailPersonalAsync","NotificationPersonal")">Lưu báo cáo</a>
                                 </div>
                             </div>
                         </div>
