--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -9,28 +9,31 @@
 }
 @if (Session["faculty"] == null)
 {
-    <div class="alert alert-danger" role="alert">
+    <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
         Chưa có khoa. Vui lòng liên hệ thư ký để thêm khoa
+        <div>
+            <img src="~/assets/img/vlu/khoa.png" class="cangiua">
+        </div>
     </div>
 }
 else if (ViewBag.CheckFormPer == true)
 {
-<div class="alert alert-danger" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
-    CHƯA CÓ BIỂU MẪU CÓ THÁNG NÀY
-    <div>
-        <img src="~/assets/img/vlu/fomm.png" class="cangiua">
-    </div>
+    <div class="alert alert-danger" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
+        CHƯA CÓ BIỂU MẪU CÓ THÁNG NÀY
+        <div>
+            <img src="~/assets/img/vlu/fomm.png" class="cangiua">
+        </div>
 
-</div>
+    </div>
 }
 else if (ViewBag.CheckReportPer == true)
 {
- <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:25px;">
-   BẠN ĐÃ BÁO CÁO THÁNG NÀY!    
-</div>
-<div>
-    <img src="~/assets/img/vlu/formm.png"class="cangiua">
-</div>
+    <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:25px;">
+        BẠN ĐÃ BÁO CÁO THÁNG NÀY!
+    </div>
+    <div>
+        <img src="~/assets/img/vlu/formm.png" class="cangiua">
+    </div>
 }
 else
 {
