--- a/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/FormReport/Index.cshtml
@@ -18,7 +18,7 @@
 }
 else if (ViewBag.CheckFormPer == true)
 {
-    <div class="alert alert-danger" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
+    <div class="#" role="alert" style="font-size: 30px; color: black; text-align: center; font-weight: bold;padding:30px">
         CHƯA CÓ BIỂU MẪU CÓ THÁNG NÀY
         <div>
             <img src="~/assets/img/vlu/fomm.png" class="cangiua">
